force-app/main/default/objects/Employee_Training__c/Employee_Training__c.object-meta.xml
<CustomObject>
    <label>Employee Training</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Employee Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>