force-app/main/default/objects/Employee_Training__c/fields/CEMS_Assessment_Link__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Assessment_Link__c</fullName>
    <label>Assessment Link</label>
    <type>Url</type>
</CustomField>