force-app/main/default/objects/Employee_Training__c/fields/CEMS_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Assessment_Score__c</fullName>
    <label>Assessment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>