force-app/main/default/objects/Employee_Training__c/fields/CEMS_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Assessment_Status__c</fullName>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>