force-app/main/default/objects/Employee_Training__c/fields/CEMS_Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Certification_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certification Name</label>
    <referenceTo>CEMS_Training__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>