force-app/main/default/objects/Employee_Training__c/fields/CEMS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>