force-app/main/default/objects/Employee_Training__c/fields/CEMS_Employee_Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee_Certificate_ID__c</fullName>
    <label>Employee Certificate ID</label>
    <type>AutoNumber</type>
</CustomField>