force-app/main/default/objects/Employee_Training__c/fields/CEMS_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee_Name__c</fullName>
    <label>Employee Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>