force-app/main/default/objects/Employee_Training__c/fields/CEMS_Learning_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Learning_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning Name</label>
    <referenceTo>CEMS_Training__c</referenceTo>
    <relationshipLabel>Employee Trainings (Learning Name)</relationshipLabel>
    <relationshipName>Employee_Trainings1</relationshipName>
    <type>Lookup</type>
</CustomField>