force-app/main/default/objects/Employee_Training__c/fields/CEMS_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>