force-app/main/default/objects/Employee_Training__c/fields/CEMS_Specific__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific</label>
    <type>Checkbox</type>
</CustomField>