force-app/main/default/objects/Employee_Training__c/fields/Employee_Learning_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Learning_ID__c</fullName>
    <label>Employee Learning ID</label>
    <type>AutoNumber</type>
</CustomField>