force-app/main/default/objects/Employee_Training__c/recordTypes/CEMS_Employee_Certificate.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Employee_Certificate</fullName>
    <active>true</active>
    <label>Employee Certificate</label>
</RecordType>