force-app/main/default/objects/Employee_Training__c/recordTypes/CEMS_Employee_Learning.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Employee_Learning</fullName>
    <active>true</active>
    <label>Employee Learning</label>
</RecordType>