force-app/main/default/objects/Employee_Training__c/validationRules/ET_due_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_due_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() &gt; CEMS_Due_Date__c</errorConditionFormula>
    <errorDisplayField>CEMS_Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be less than today</errorMessage>
</ValidationRule>