force-app/main/default/objects/Employee_Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Employee_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CEMS_Due_Date__c</columns>
    <columns>CEMS_Status__c</columns>
    <columns>CEMS_Learning_Name__c</columns>
    <columns>CEMS_Assessment_Status__c</columns>
    <columns>CEMS_Specific__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>